Making updates based on solution manager changes.